--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "golf-ball-three-js",
+  "name": "golfball-threejs",
+  "homepage": "https://webforworld2512.github.io/golfball-threejs/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
+    "gh-pages": "^6.3.0",
     "vite": "^4.3.9"
   },
   "dependencies": {
